[project]
name = "first-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "langchain-ollama>=1.1.0",
    "psycopg>=3.3.4",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
